--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -22,7 +22,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/txt_username"
+            android:id="@+id/txt_username_login"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -32,7 +32,7 @@
             android:paddingLeft="20dp" />
 
         <EditText
-            android:id="@+id/txt_password"
+            android:id="@+id/txt_password_login"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:background="@drawable/capsule"
