--- a/app/src/main/res/layout/activity_reguser.xml
+++ b/app/src/main/res/layout/activity_reguser.xml
@@ -113,23 +113,43 @@
             android:id="@+id/radioButton_admin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             android:onClick="onRadioButtonClicked"
             android:text="Admin"
             android:textSize="15dp"
             android:textStyle="bold"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pilihan_reguser"/>
 
         <RadioButton
             android:id="@+id/radioButton_hakim"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             android:onClick="onRadioButtonClicked"
             android:text="Hakim"
             android:textSize="15dp"
             android:textStyle="bold"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioButton_admin"/>
+
+        <RadioButton
+            android:id="@+id/radioButton_panitera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:onClick="onRadioButtonClicked"
+            android:text="Panitera Pengganti"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioButton_hakim"/>
 
     </RadioGroup>
 
