--- a/app/src/main/res/layout/activity_entry_sidang.xml
+++ b/app/src/main/res/layout/activity_entry_sidang.xml
@@ -3,12 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
-    tools:context=".detail.Umum">
+    tools:context=".operator.EntrySidang">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_entrysidang"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
@@ -19,36 +18,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/btn_back_umum"
+        android:id="@+id/btn_back_entrysidang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintStart_toStartOf="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar_entrysidang"
+        app:layout_constraintStart_toStartOf="@+id/toolbar_entrysidang"
+        app:layout_constraintTop_toTopOf="@+id/toolbar_entrysidang"
+        android:src="@drawable/ic_baseline_arrow_back_24" />
 
     <TextView
-        android:id="@+id/tv_text"
+        android:id="@+id/tv_text_entrysidang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:text="Entry Antrian"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="24sp"
-        android:text="Jadwal Sidang"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintStart_toEndOf="@+id/btn_back_umum"
-        app:layout_constraintTop_toTopOf="@+id/toolbar" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar_entrysidang"
+        app:layout_constraintStart_toEndOf="@+id/btn_back_entrysidang"
+        app:layout_constraintTop_toTopOf="@+id/toolbar_entrysidang" />
 
     <WebView
-        android:id="@+id/wb_webview_umum"
+        android:id="@+id/wb_webview_entrysidang"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_entrysidang" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
