--- a/app/src/main/res/layout/activity_lihat_agenda.xml
+++ b/app/src/main/res/layout/activity_lihat_agenda.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
-    tools:context=".detail.Umum">
+    tools:context=".operator.LihatAgenda">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_lihat_agenda"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
@@ -19,36 +19,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/btn_back_umum"
+        android:id="@+id/btn_back_lihat_agenda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintStart_toStartOf="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar_lihat_agenda"
+        app:layout_constraintStart_toStartOf="@+id/toolbar_lihat_agenda"
+        app:layout_constraintTop_toTopOf="@+id/toolbar_lihat_agenda"
+        android:src="@drawable/ic_baseline_arrow_back_24" />
 
     <TextView
-        android:id="@+id/tv_text"
+        android:id="@+id/tv_text_lihat_agenda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:text="Daftar Agenda"
         android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="24sp"
-        android:text="Jadwal Sidang"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintStart_toEndOf="@+id/btn_back_umum"
-        app:layout_constraintTop_toTopOf="@+id/toolbar" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar_lihat_agenda"
+        app:layout_constraintStart_toEndOf="@+id/btn_back_lihat_agenda"
+        app:layout_constraintTop_toTopOf="@+id/toolbar_lihat_agenda" />
 
     <WebView
-        android:id="@+id/wb_webview_umum"
+        android:id="@+id/wb_webview_lht_agenda"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_lihat_agenda" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
