--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,19 +14,19 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="200dp"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/pnsingkawang" />
+            app:srcCompat="@drawable/ptspskw" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="400dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -76,8 +76,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cons"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/bgmains"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3">
@@ -86,10 +87,11 @@
                 android:id="@+id/btn_perdata"
                 android:layout_width="125dp"
                 android:layout_height="125dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/tabung"
                 android:elevation="3dp"
                 android:src="@drawable/ic_perdata"
+                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="@id/cons" />
@@ -98,10 +100,11 @@
                 android:id="@+id/btn_pidana"
                 android:layout_width="125dp"
                 android:layout_height="125dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/tabung"
                 android:elevation="3dp"
                 android:src="@drawable/ic_pidana"
+                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/cons" />
@@ -110,31 +113,50 @@
                 android:id="@+id/btn_hukum"
                 android:layout_width="125dp"
                 android:layout_height="125dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/tabung"
                 android:elevation="3dp"
                 android:src="@drawable/ic_hukum"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="@+id/guideline4" />
+
 
             <ImageButton
                 android:id="@+id/btn_umum"
                 android:layout_width="125dp"
                 android:layout_height="125dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/tabung"
                 android:elevation="3dp"
                 android:src="@drawable/ic_umum"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline4"
                 tools:ignore="UnknownId" />
 
             <TextView
+                android:id="@+id/txt_notip"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:translationZ="20dp"
+                android:background="@drawable/circle"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:text="1"
+                android:textSize="20dp"
+                app:layout_constraintEnd_toEndOf="@+id/btn_umum"
+                app:layout_constraintTop_toTopOf="@+id/btn_umum" />
+
+            <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Umum"
+                android:text="Jadwal Sidang"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -186,14 +208,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5" />
+                app:layout_constraintGuide_begin="206dp" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.43" />
+                app:layout_constraintGuide_percent="0.50" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
