--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#019800</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="text">#000000</color>
 
 </resources>
